--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,40 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NexonCord"
         tools:targetApi="31">
-
         <activity
-            android:name=".AuthActivity"
-            android:exported="true">
+            android:name="com.theateam.nexoncordapp.LoginMVP.LoginActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.NexonCord">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".LoginActivity"
-            android:theme="@style/Theme.NexonCord"
-            android:exported="false" />
-
-        <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/Theme.NexonCord"
-            android:exported="false" />
-
-        <activity
-            android:name=".ForgotPasswordActivity"
-            android:theme="@style/Theme.NexonCord"
-            android:exported="false" />
-
-        <activity
-            android:name=".ResetPasswordActivity"
-            android:theme="@style/Theme.NexonCord"
-            android:exported="false" />
-
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.NexonCord"
-            android:exported="false" />
     </application>
 
 </manifest>
