--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.NexonCord"
         tools:targetApi="31">
         <activity
-            android:name="com.theateam.nexoncordapp.LoginMVP.LoginActivity"
+            android:name=".DashboardMVP.DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterMVP.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginMVP.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.NexonCord">
